feat: Minor bug fix
